Thay đổi logic seeder data